--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         .clock{
             width: 450px;
             height: 450px;
-            background-image: url(img/clock.png);
+            background-image: url(./clock.png);
             background-size: cover;
             display: flex;
             justify-content: center;
